Tue Oct 22 23:20:40 1996  Per Bothner  <bothner@deneb.cygnus.com>

	* {case,cond,delay,let}.scm:  Removed, merged to std_syntax.
	* std_syntax.scm:  New file, contains old macros and let*.
	* Makefile.{am,in}:  Update accordingly.

Sun Sep  8 21:04:30 1996  Per Bothner  <bothner@deneb.cygnus.com>

	* case.scm, cond.scm, delay.scm, let.scm:  New macros.
	* Makefile.{am,in}:  Add new classes.
	(JAVA, JAVAC):  Fix -classpath argument.
	(DIST_COMMON):  Add ChangeLog.	

Tue Sep  3 22:11:58 1996  Per Bothner  <bothner@deneb.cygnus.com>

	* do.scm:  New file - implement do macro.
	* when_unless.scm:  Implement (non-standard) when and unless.
	* Makefile.{am,in}:  New file.