@@ -1,3 +1,7 @@
+Fri Dec 13 17:02:37 1996  Per Bothner  <bothner@deneb.cygnus.com>
+
+	* Makefile.{am.in} (JAVA):  Separate out new JAVAFLAGS macro.
+
 Tue Oct 22 23:20:40 1996  Per Bothner  <bothner@deneb.cygnus.com>
 
 	* {case,cond,delay,let}.scm:  Removed, merged to std_syntax.
